--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <iframe src="https://designtokenses.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+<div class="contenedor">
+  <iframe src="https://designtokenses.substack.com/embed" 
+    width="480" height="320" style="border:1px solid #EEE; background:white; position: absolute;
+top: 50%;
+  left: 50%;
+  margin: -25px 0 0 -25px;" frameborder="0" scrolling="no"></iframe>
+</div>
