--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
   <div class="hijo">
-    <iframe src="https://designtokenses.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://designtokenses.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white; top:50%;
+  left:50%" frameborder="0" scrolling="no"></iframe>
   </div>
 
 .hijo {
