--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-
-  <div class="hijo">
+ <div class="hijo">
     <iframe src="https://designtokenses.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white; top:50%;
-  left:50%" frameborder="0" scrolling="no"></iframe>
+  left:50% margin: -25px 0 0 -25px;" frameborder="0" scrolling="no"></iframe>
   </div>
-
-.hijo {
-  /* centrar vertical y horizontalmente */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -25px 0 0 -25px; /* aplicar a top y al margen izquierdo un valor negativo para completar el centrado del elemento hijo */
-}
