--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
- <div class="hijo">
-    <iframe src="https://designtokenses.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white; top:50%;
-  left:50% margin: -25px 0 0 -25px;" frameborder="0" scrolling="no"></iframe>
-  </div>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        .iframe-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Esto hace que el contenedor tenga el alto de la ventana */
+        }
+    </style>
+</head>
+<body>
+
+<div class="iframe-container">
+    <iframe src="https://designtokenses.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+</div>
+
+</body>
+</html>
+
